again and again

--- a/brochure.html
+++ b/brochure.html
@@ -23,8 +23,8 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header class="w3-container w3-deep-purple w3-center" style="padding:30px 8px">
-      <h1 class="w3-margin w3-jumbo"><a href = "brochure2.html"><h3><img src = "https://yoonjitae.github.io/brochure.github.io/logo/team_logo_new.png" id = "origins"></h3></a>IPS Database Project</h1>
+    <header class="w3-container w3-deep-purple w3-center" style="padding:128px 16px">
+      <h1 class="w3-margin w3-jumbo"><a href = "brochure.html"><h3><img src = "https://yoonjitae.github.io/brochure.github.io/logo/team_logo_new.png" id = "origins"></h3></a>IPS Database Project</h1>
     </header>
    <!-- Instroduction -->
    <div class="w3-row-padding w3-padding-64 w3-container">
