--- a/brochure.html
+++ b/brochure.html
@@ -32,13 +32,13 @@
       <h1>Team Origins Development and the Database Project</h1>
       <div class="w3-twothird">
         <h5 class="w3-padding-32">
-          <h5> The members of team <b><span style="color:#4B0082">Origins Development</span></b> are <b><span style="color:#800080">Calvin Edwards</span></b>, <b><span style="color:#800080">James Hufnagel</span></b> and <b><span style="color:#800080">Jane Tae</span></b>. They are the second-year studnets who are studying Information and Computer Systems at Camosun College.</h5>
-          <h5> Our client is the <b><span style="color:#A52A2A">Indigenous Perspectives Society</span></b> has experienced difficulty with their current database system. Their current system is data-driven and neglects the user's experience(UX). The design is intimidating to existing and
+          <p> The members of team <b><span style="color:#4B0082">Origins Development</span></b> are <b><span style="color:#800080">Calvin Edwards</span></b>, <b><span style="color:#800080">James Hufnagel</span></b> and <b><span style="color:#800080">Jane Tae</span></b>. They are the second-year studnets who are studying Information and Computer Systems at Camosun College.</p>
+          <p> Our client is the <b><span style="color:#A52A2A">Indigenous Perspectives Society</span></b> has experienced difficulty with their current database system. Their current system is data-driven and neglects the user's experience(UX). The design is intimidating to existing and
             new users; without an overview for employee tasks relating to data records, finding the correct
             information can be a daunting experience. <br>Their current database’s features are underutilized
             and create a risk of creating deficiencies in the workflow. The proposed project intends to give
             an overview of all the tasks that are required for government and charity organization
-            compliance standards. </h5>
+            compliance standards. </p>
        </h5>
       </div>
       <div class="w3-third w3-center">
@@ -51,7 +51,7 @@
           <br>
           <br>
           <br>
-          <a href = "http://camosun.ca/learn/programs/information-computer-systems/"><img height=78px width=200px src="https://yoonjitae.github.io/brochure.github.io/logo/Camosun_logo.png" alt=""></a>
+          <a href = "http://camosun.ca/learn/programs/information-computer-systems/" target="_blank"><img height=78px width=200px src="https://yoonjitae.github.io/brochure.github.io/logo/Camosun_logo.png" alt=""></a>
       </div>
     </div>
   </div>
@@ -67,13 +67,13 @@
           <br>
           <br>
           <br>
-            <a href = "https://ipsociety.ca/"><img height=189px width=200px src="https://yoonjitae.github.io/brochure.github.io/logo/IPS_logo_colour.png" alt=""></a>
+            <a href = "https://ipsociety.ca/" target="_blank"><img height=189px width=200px src="https://yoonjitae.github.io/brochure.github.io/logo/IPS_logo_colour.png" alt=""></a>
           </div>
       <div class="w3-twothird">
-        <h5 style="font-style: italic;" class="w3-text-grey">
+        <p style="font-style: italic;" class="w3-text-grey">
           The client is the <span style="color:#A52A2A">Indigenous Perspectives Society</span>; the society is a charitable organization that
           supports the First Nation communities and culture across British Columbia. The development
-          team meets with some leading members of the IPS: </h5>
+          team meets with some leading members of the IPS: </p>
 
           <ul >
               <li> Elaine Zamardi, Executive and Project Coordinator</li>
@@ -81,10 +81,10 @@
               <li> Linda Lucas, Special Projects Coordinator</li>
               <li> Rachelle Dallaire, Executive Director</li>
           </ul>
-          <h5 style="font-style: italic;" class="w3-text-grey">Through project demonstrations, the Origins Development team has built a trusting rapport with
+          <p style="font-style: italic;" class="w3-text-grey">Through project demonstrations, the Origins Development team has built a trusting rapport with
           the IPS. Open communication and flexible meetings are foundational tenants between the
           development team and the project sponsor contacts.
-          </h5>
+        </p>
       </div>
     </div>
   </div>
@@ -97,16 +97,16 @@
       <div >
         <h1>The Project</h1>
         <h5 class="w3-padding-32">
-          <h5>The Origins Development team has made significant progress on the <a href = "#organization"><b><span style="color:#A52A2A">Indigenous Perspectives
+          <p>The Origins Development team has made significant progress on the <a href = "#organization"><b><span style="color:#A52A2A">Indigenous Perspectives
             Society (IPS)</span></b></a> a Database Project; the database, API layer and the front-end browser client are
-            almost reaching their expected levels of progress. </h5> 
-            <h5>To give ample time for the IPS to fully define the functionality required, 
+            almost reaching their expected levels of progress. </p> 
+            <p>To give ample time for the IPS to fully define the functionality required, 
                 the development team has focused on modular components without heavily investing in undefined behaviour based on assumptions of IPS user needs; 
                 however, this has prevented us from entering a testing state. The database has been fully normalized to
             reflect the business logic of the IPS as per the project charter’s scope. The front-end browser
-            client has structure and styling for various widgets to allow users to view data in multiple ways. </h5>
-            <h5> We are in the process of fully developing theses feature, we are on track to finish more than the project’s
-            defined scope by <b>August 16th</b>.</h5>
+            client has structure and styling for various widgets to allow users to view data in multiple ways. </p>
+            <p> We are in the process of fully developing theses feature, we are on track to finish more than the project’s
+            defined scope by <b>August 16th</b>.</p>
         </h5>
       </div>
     </div>
@@ -123,10 +123,10 @@
         <div class="col-md-9">
             <h3 class="my-1"><strong>Calvin Edwards</strong></h3>
             <h4 style="color:#800080">Lead Project Architect</h4>
-            <h5>After a successful career as a Certified Red-Seal Electrician for eight-years, Calvin Edwards further pursued his passion for programmable logic by enrolling in Camosun’s ICS program. During the program, he has won two awards over two consecutive years in the faculty of Computer Science. 
+            <p>After a successful career as a Certified Red-Seal Electrician for eight-years, Calvin Edwards further pursued his passion for programmable logic by enrolling in Camosun’s ICS program. During the program, he has won two awards over two consecutive years in the faculty of Computer Science. 
               In his spare time, he pushes himself to build industry skills in cloud development and DevOps; he currently holds certifications as both an AWS Solutions Architect Associate and an AWS Certified Developer Associate. Calvin plans to acquire the Certified Kubernetes Application Developer practical exam before graduating in August. 
               Calvin’s trades background has provided him with the project management and leadership skills necessary to thrive in the IT industry.
-            </h5>
+            </p>
             <br>
             <Br>
         </div>
@@ -145,12 +145,12 @@
         <div class="col-md-9">
             <h3 class="my-1"><strong>James Hufnagel</strong></h3>
             <h4 style="color:#800080">Lead Developer</h4>
-            <h5>James Hufnagel is a fast learner with a passion for technology. 
+            <p>James Hufnagel is a fast learner with a passion for technology. 
               He is meticulous and adept at programming and quickly understands algorithms and patterns. 
               During his spare time, he applies himself to various intricate web projects. 
               James’ strong sense of resolve makes him an integral part of the development team. 
               James is focused on securing his role in a company as full-stack developer in pursuit of his passion for logic and programming.
-            </h5>
+            </p>
             <br>
             <Br>
         </div>
@@ -169,12 +169,12 @@
         <div class="col-md-9">
             <h3 class="my-1"><strong>Yoonji(Jane) Tae</strong></h3>
             <h4 style="color:#800080">Scrum Master</h4>
-            <h5>Jane Tae has been interested in technology since her first experiences with a computer. 
+            <p>Jane Tae has been interested in technology since her first experiences with a computer. 
               After graduation in Japanese in Korea, she was eager to learn computer science, so she began to study at Camosun College.
               After commencing the ICS program, she faced difficulty in the curriculum, but she never gave up learning. 
               She possesses an interest in web development; however, she is passionate about learning database technologies and best-practices. 
               She plans to further her education with an Oracle Database Certification.
-            </h5>
+            </p>
             <br>
             <Br>
         </div>
@@ -261,14 +261,14 @@
       <div >
         <h1>Thank You</h1>
         <h5 class="w3-padding-32">
-          <h5>
+          <p>
             Team <span style="color:#4B0082">Origins development</span> would like to thank <span style="color:#A52A2A">Candace McKivett</span>, <span style="color:#A52A2A">Elaine Zamardi</span>, <span style="color:#A52A2A">Linda Lucas</span> and <span style="color:#A52A2A">Rachelle
             Dallaire</span> at IPS and the <span style="color:#008000">Camosun faculty</span> and chair, <span style="color:#008000">Saryta Schaerer</span> for providing the chance to support Canada’s First Nations
             communities.
-            </h5>
-        <h5>
+        </p>
+        <p>
             We look forward to the knowledge and experience this opportunity will provide us for our future in computing.
-        </h5>
+        </p>
         </h5>
       </div>
     </div>
