--- a/brochure.html
+++ b/brochure.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
@@ -32,8 +32,9 @@
       <h1>Team Origins Development and the Database Project</h1>
       <div class="w3-twothird">
         <h5 class="w3-padding-32">
-          <p> The members of team <b><span style="color:#4B0082">Origins Development</span></b> are <b><span style="color:#800080">Calvin Edwards</span></b>, <b><span style="color:#800080">James Hufnagel</span></b> and <b><span style="color:#800080">Jane Tae</span></b>. They are the second-year students who are studying Information and Computer Systems at Camosun College.</p>
-          <p> Our client is the <b><span style="color:#A52A2A">Indigenous Perspectives Society</span></b> has experienced difficulty with their current database system. Their current system is data-driven and neglects the user's experience(UX). The design is intimidating to existing and
+          <p> The members of team <b><span style="color:#4B0082">Origins Development</span></b> are <b><span style="color:#800080">Calvin Edwards</span></b>, <b><span style="color:#800080">James Hufnagel</span></b> and <b><span style="color:#800080">Jane Tae</span></b>. They are second-year studnets who are studying Information and Computer Systems at Camosun College.</p>
+          <p> Our client is, the <b><span style="color:#A52A2A">Indigenous Perspectives Society</span></b>, has experienced difficulty with their current database system. 
+            <br>Their current system is data driven and neglects the user's experience (UX). The design is intimidating to existing and
             new users; without an overview for employee tasks relating to data records, finding the correct
             information can be a daunting experience. <br>Their current database’s features are underutilized
             and create a risk of creating deficiencies in the workflow. The proposed project intends to give
@@ -98,7 +99,7 @@
         <h1>The Project</h1>
         <h5 class="w3-padding-32">
           <p>The Origins Development team has made significant progress on the <a href = "#organization"><b><span style="color:#A52A2A">Indigenous Perspectives
-            Society (IPS)</span></b></a> a Database Project; the database, API layer and the front-end browser client are
+            Society (IPS)'s</span></b></a> Database Project; the database, API layer and the front-end browser client are
             almost reaching their expected levels of progress. </p> 
             <p>To give ample time for the IPS to fully define the functionality required, 
                 the development team has focused on modular components without heavily investing in undefined behaviour based on assumptions of IPS user needs; 
@@ -106,7 +107,7 @@
             reflect the business logic of the IPS as per the project charter’s scope. The front-end browser
             client has structure and styling for various widgets to allow users to view data in multiple ways. </p>
             <p> We are in the process of fully developing theses feature, we are on track to finish more than the project’s
-            defined scope by <b>August 16th</b>.</p>
+            defined scope by <b>August 16th</b>.</p
         </h5>
       </div>
     </div>
