--- a/brochure.html
+++ b/brochure.html
@@ -107,7 +107,7 @@
             reflect the business logic of the IPS as per the project charter’s scope. The front-end browser
             client has structure and styling for various widgets to allow users to view data in multiple ways. </p>
             <p> We are in the process of fully developing theses feature, we are on track to finish more than the project’s
-            defined scope by <b>August 16th</b>.</p
+            defined scope by <b>August 16th</b>.</p>
         </h5>
       </div>
     </div>
@@ -134,9 +134,9 @@
       </div>  
       <div class="w3-third w3-center">
         <br>
+        <!-- <br>
         <br>
-        <br>
-        <br>
+        <br> -->
         <br>
         <br>
         <img style="border-radius: 8px;" height=300px width=240px src="https://yoonjitae.github.io/brochure.github.io/team_pictures/calvin.png" alt="">
@@ -154,12 +154,15 @@
             </p>
             <br>
             <Br>
+              <br>
         </div>
       </div>  
       <div class="w3-third w3-center">
         <br>
         <Br>
+
         <img style="border-radius: 8px;" height=300px width=240px src="https://yoonjitae.github.io/brochure.github.io/team_pictures/james.png" alt="">
+        <br>
       </div>
 
       <div class="w3-twothird" id= "about_jane">
@@ -167,6 +170,8 @@
         <br>
         <br>
         <br>
+        <Br>
+
         <div class="col-md-9">
             <h3 class="my-1"><strong>Yoonji(Jane) Tae</strong></h3>
             <h4 style="color:#800080">Scrum Master</h4>
@@ -187,6 +192,8 @@
         <br>
         <br>
         <Br>
+          <Br>
+
         <img style="border-radius: 8px;" height=300px width=240px src="https://yoonjitae.github.io/brochure.github.io/team_pictures/jane_tae.png" alt="">
       </div>
     </div>
