--- a/brochure.html
+++ b/brochure.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
@@ -107,7 +107,7 @@
             reflect the business logic of the IPS as per the project charter’s scope. The front-end browser
             client has structure and styling for various widgets to allow users to view data in multiple ways. </p>
             <p> We are in the process of fully developing theses feature, we are on track to finish more than the project’s
-            defined scope by <b>August 16th</b>.</p>
+            defined scope by <b>August 16th</b>.</p
         </h5>
       </div>
     </div>
@@ -134,9 +134,9 @@
       </div>  
       <div class="w3-third w3-center">
         <br>
-        <!-- <br>
         <br>
-        <br> -->
+        <br>
+        <br>
         <br>
         <br>
         <img style="border-radius: 8px;" height=300px width=240px src="https://yoonjitae.github.io/brochure.github.io/team_pictures/calvin.png" alt="">
@@ -154,15 +154,12 @@
             </p>
             <br>
             <Br>
-              <br>
         </div>
       </div>  
       <div class="w3-third w3-center">
         <br>
         <Br>
-
         <img style="border-radius: 8px;" height=300px width=240px src="https://yoonjitae.github.io/brochure.github.io/team_pictures/james.png" alt="">
-        <br>
       </div>
 
       <div class="w3-twothird" id= "about_jane">
@@ -170,8 +167,6 @@
         <br>
         <br>
         <br>
-        <Br>
-
         <div class="col-md-9">
             <h3 class="my-1"><strong>Yoonji(Jane) Tae</strong></h3>
             <h4 style="color:#800080">Scrum Master</h4>
@@ -192,8 +187,6 @@
         <br>
         <br>
         <Br>
-          <Br>
-
         <img style="border-radius: 8px;" height=300px width=240px src="https://yoonjitae.github.io/brochure.github.io/team_pictures/jane_tae.png" alt="">
       </div>
     </div>
