--- a/brochure.html
+++ b/brochure.html
@@ -34,9 +34,9 @@
         <h5 class="w3-padding-32">
           <p> The members of team <b><span style="color:#4B0082">Origins Development</span></b> are <b><span style="color:#800080">Calvin Edwards</span></b>, <b><span style="color:#800080">James Hufnagel</span></b> and <b><span style="color:#800080">Jane Tae</span></b>. They are second-year studnets who are studying Information and Computer Systems at Camosun College.</p>
           <p> Our client is, the <b><span style="color:#A52A2A">Indigenous Perspectives Society</span></b>, has experienced difficulty with their current database system. 
-            <br>Their current system is data driven and neglects the user's experience (UX). The design is intimidating to existing and
+            Their current system is data driven and neglects the user's experience (UX). The design is intimidating to existing and
             new users; without an overview for employee tasks relating to data records, finding the correct
-            information can be a daunting experience. <br>Their current database’s features are underutilized
+            information can be a daunting experience.</p> <p>Their current database’s features are underutilized
             and create a risk of creating deficiencies in the workflow. The proposed project intends to give
             an overview of all the tasks that are required for government and charity organization
             compliance standards. </p>
@@ -106,8 +106,8 @@
                 however, this has prevented us from entering a testing state. The database has been fully normalized to
             reflect the business logic of the IPS as per the project charter’s scope. The front-end browser
             client has structure and styling for various widgets to allow users to view data in multiple ways. </p>
-            <p> We are in the process of fully developing theses feature, we are on track to finish more than the project’s
-            defined scope by <b>August 16th</b>.</p
+            <p> We are in the process of fully developing theses feature. We are on track to finish more than the project’s
+            defined scope by <b>August 16th</b>.</p>
         </h5>
       </div>
     </div>
@@ -124,7 +124,7 @@
         <div class="col-md-9">
             <h3 class="my-1"><strong>Calvin Edwards</strong></h3>
             <h4 style="color:#800080">Lead Project Architect</h4>
-            <p>After a successful career as a Certified Red-Seal Electrician for eight-years, Calvin Edwards further pursued his passion for programmable logic by enrolling in Camosun’s ICS program. During the program, he has won two awards over two consecutive years in the faculty of Computer Science. 
+            <p>After a successful career as a Certified Red-Seal Electrician for eight years, Calvin Edwards further pursued his passion for programmable logic by enrolling in Camosun’s ICS program. During the program, he has won two awards over two consecutive years in the faculty of Computer Science. 
               In his spare time, he pushes himself to build industry skills in cloud development and DevOps; he currently holds certifications as both an AWS Solutions Architect Associate and an AWS Certified Developer Associate. Calvin plans to acquire the Certified Kubernetes Application Developer practical exam before graduating in August. 
               Calvin’s trades background has provided him with the project management and leadership skills necessary to thrive in the IT industry.
             </p>
