--- a/brochure.html
+++ b/brochure.html
@@ -32,7 +32,7 @@
       <h1>Team Origins Development and the Database Project</h1>
       <div class="w3-twothird">
         <h5 class="w3-padding-32">
-          <p> The members of team <b><span style="color:#4B0082">Origins Development</span></b> are <b><span style="color:#800080">Calvin Edwards</span></b>, <b><span style="color:#800080">James Hufnagel</span></b> and <b><span style="color:#800080">Jane Tae</span></b>. They are second-year studnets who are studying Information and Computer Systems at Camosun College.</p>
+          <p> The members of team <b><span style="color:#4B0082">Origins Development</span></b> are <b><span style="color:#800080">Calvin Edwards</span></b>, <b><span style="color:#800080">James Hufnagel</span></b> and <b><span style="color:#800080">Jane Tae</span></b>. They are second-year students who are studying Information and Computer Systems at Camosun College.</p>
           <p> Our client is, the <b><span style="color:#A52A2A">Indigenous Perspectives Society</span></b>, has experienced difficulty with their current database system. 
             Their current system is data driven and neglects the user's experience (UX). The design is intimidating to existing and
             new users; without an overview for employee tasks relating to data records, finding the correct
