Editing the introduction

--- a/brochure.html
+++ b/brochure.html
@@ -72,15 +72,18 @@
           </div>
       <div class="w3-twothird">
         <p style="font-style: italic;" class="w3-text-grey">
-          The client is the <span style="color:#A52A2A">Indigenous Perspectives Society</span>; the society is a charitable organization that
-          supports the First Nation communities and culture across British Columbia. The development
-          team meets with some leading members of the IPS: </p>
+          The client is the <span style="color:#A52A2A">Indigenous Perspectives Society</span>; IPS is a charitable and not-for-profit social enterprise 
+          that offers training, consulting, and projects to help foster a deeper understanding of Indigenous perspectives, 
+          cultural differences, and the need for self-determination. 
+          By creating excellence through training and leadership, IPS helps strengthen lives and build successful relationships in the communities they serve. 
+          The development team meets with some leading members of the IPS: </p>
 
-          <ul >
-              <li> Elaine Zamardi, Executive and Project Coordinator</li>
-              <li> Candace McKivett, Program Development Project Lead</li>
-              <li> Linda Lucas, Special Projects Coordinator</li>
-              <li> Rachelle Dallaire, Executive Director</li>
+          <ul>
+               <li> Linda Lucas, Special Projects Coordinator</li>
+               <li> Candace McKivett, Program Development Project Lead</li>
+               <li> Rachelle Dallaire, Executive Director</li>
+               <li> Elaine Zamardi, Executive and Project Coordinator</li>
+             
           </ul>
           <p style="font-style: italic;" class="w3-text-grey">Through project demonstrations, the Origins Development team has built a trusting rapport with
           the IPS. Open communication and flexible meetings are foundational tenants between the
