--- a/brochure.html
+++ b/brochure.html
@@ -263,15 +263,15 @@
     <div class="w3-content">
       <div >
         <h1>Thank You</h1>
-        <h5 class="w3-padding-32">
-          <p>
-            Team <span style="color:#4B0082">Origins development</span> would like to thank <span style="color:#A52A2A">Candace McKivett</span>, <span style="color:#A52A2A">Elaine Zamardi</span>, <span style="color:#A52A2A">Linda Lucas</span> and <span style="color:#A52A2A">Rachelle
-            Dallaire</span> at IPS and the <span style="color:#008000">Camosun faculty</span> and chair, <span style="color:#008000">Saryta Schaerer</span> for providing the chance to support Canada’s First Nations
-            communities.
-        </p>
-        <p>
-            We look forward to the knowledge and experience this opportunity will provide us for our future in computing.
-        </p>
+             <h5 class="w3-padding-32">
+             <p>
+                 Team <span style="color:#4B0082">Origins development</span> would like to thank <span style="color:#A52A2A">Rachelle
+                    Dallaire</span>, <span style="color:#A52A2A">Linda Lucas</span>, <span style="color:#A52A2A">Candace McKivett</span> and <span style="color:#A52A2A">Elaine Zamardi</span> at IPS and the <span style="color:#008000">Camosun faculty</span> and chair, <span style="color:#008000">Saryta Schaerer</span> for providing the chance to support Canada’s First Nations
+                 communities.
+             </p>
+             <p>
+                 We look forward to the knowledge and experience this opportunity will provide us for our future in computing.
+             </p>
         </h5>
       </div>
     </div>
