--- a/brochure.html
+++ b/brochure.html
@@ -33,7 +33,7 @@
       <div class="w3-twothird">
         <h5 class="w3-padding-32">
           <p> The members of team <b><span style="color:#4B0082">Origins Development</span></b> are <b><span style="color:#800080">Calvin Edwards</span></b>, <b><span style="color:#800080">James Hufnagel</span></b> and <b><span style="color:#800080">Jane Tae</span></b>. They are the second-year students who are studying Information and Computer Systems at Camosun College.</p>
-          <p> Our client is the <b><span style="color:#A52A2A">Indigenous Perspectives Society</span></b>, and their current database system is not functional nor did it meet the organizationals needs. Their current system is data-driven and neglects the user's experience (UX). The design is intimidating to existing and
+          <p> Our client is the <b><span style="color:#A52A2A">Indigenous Perspectives Society</span></b>, and their current database system is not functional nor did it meet the organizational needs. Their current system is data-driven and neglects the user's experience (UX). The design is intimidating to existing and
               new users; without an overview for employee tasks relating to data records, finding the correct
               information can be a daunting experience. <br>Their current database’s features are underutilized
               and create a risk of creating deficiencies in the workflow. The proposed project intends to give
