--- a/brochure.html
+++ b/brochure.html
@@ -71,12 +71,19 @@
           </div>
       <div class="w3-twothird">
         <p style="font-style: italic;" class="w3-text-grey">
-          The client is the <span style="color:#A52A2A">Indigenous Perspectives Society</span>; IPS is a charitable and not-for-profit social enterprise 
-            that offers training, consulting, and projects to help foster a deeper understanding of Indigenous perspectives, 
-            cultural differences, and the need for self-determination. 
-            By creating excellence through training and leadership, IPS helps strengthen lives and build successful relationships in the communities they serve. 
-            The development team meets with some leading members of the IPS: </p>
-  
+          <br>
+          The client is the <span style="color:#A52A2A">Indigenous Perspectives Society</span>: 
+      </p>
+          <blockquote style="font-style: italic;" class="w3-text-grey">
+          "IPS is a charitable and not-for-profit social enterprise 
+          that offers training, consulting, and projects to help foster a deeper understanding of Indigenous perspectives, 
+          cultural differences, and the need for self-determination. 
+          By creating excellence through training and leadership, 
+          IPS helps strengthen lives and build successful relationships in the communities they serve." - <b><a href = "https://ipsociety.ca/">Indigenous Perspectives Society</a></b>
+      </blockquote>
+
+                  <p style="font-style: italic;" class="w3-text-grey">The development team meets with some leading members of the IPS: </p>
+
             <ul>
                 <li> Rachelle Dallaire, Executive Director</li>
                   <li> Linda Lucas, Special Projects Coordinator</li>
